Thumbnails overflowing containers (Fixes #7)

--- a/sass/components/featured-records/_featured-records.scss
+++ b/sass/components/featured-records/_featured-records.scss
@@ -14,6 +14,7 @@
             border: 1px solid $color__hr;
             gap: 30px;
             margin-bottom: 0;
+            overflow: hidden;
             padding: 30px;
 
             @media(min-width: $sm) {
@@ -25,6 +26,7 @@
             }
 
             &__thumbnail {
+                display: flex;
                 flex-shrink: 0;
                 max-width: 100%;
                 max-height: 300px;
@@ -32,6 +34,11 @@
                 @media(min-width: $lg) {
                     max-height: 350px;
                     max-width: 50%;
+                }
+
+                .thumbnail {
+                    max-width: 100%;
+                    max-height: 100%;
                 }
 
                 img {
